--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AZAG Mayden - CV</title>
-
-    <!-- Balise Meta Description -->
-    <meta name="description" content="Découvrez le CV d'AZAG Mayden, étudiant en alternance en cybersécurité informatique et réseaux, avec ses compétences et expériences.">
-
-    <!-- Balise Meta Keywords -->
-    <meta name="keywords" content="CV, AZAG Mayden, cybersécurité, informatique, alternance, compétences, expériences">
-
-    <!-- Liens CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
@@ -52,7 +44,7 @@
     </style>
 </head>
 <body>
-    <!-- Message si JavaScript est désactivé -->
+    <!-- Contenu initial visible -->
     <noscript>
         <div style="background-color: #000; color: #fff; text-align: center; padding: 20px;">
             Activez JavaScript pour afficher cette page correctement.
@@ -88,6 +80,7 @@
             </div>
         </nav>
 
+        <!-- Contenu du CV -->
         <div class="container mt-4">
             <section id="experience">
                 <h2>Expérience</h2>
