--- a/index.html
+++ b/index.html
@@ -36,18 +36,23 @@
         .btn-launch {
             background-color: #FFCC00;
             color: #000;
-            font-size: 24px;
-            padding: 20px 40px;
+            font-size: 18px;
+            padding: 10px 20px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-launch:hover {
+            background-color: #e0b700;
         }
 
         .cv {
             display: none;
             background-color: #f9f9f9;
             color: #333;
-            height: 100vh;
+            min-height: 100vh;
             overflow-y: auto;
         }
 
@@ -61,11 +66,19 @@
         .navbar {
             margin-bottom: 20px;
         }
+
+        h2 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
     <noscript>
-        <div style="background-color: #ffffff; color: #fff; text-align: center; padding: 20px;">
+        <div style="background-color: #000; color: #fff; text-align: center; padding: 20px;">
             Activez JavaScript pour afficher cette page correctement.
         </div>
     </noscript>
