--- a/index.html
+++ b/index.html
@@ -4,101 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AZAG Mayden - CV</title>
+    <!-- Framework CSS Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- FontAwesome pour les icônes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+    <!-- Meta SEO -->
+    <meta name="description" content="Découvrez le CV de AZAG Mayden, étudiant en alternance spécialisé en cybersécurité informatique et réseaux.">
+    <meta name="keywords" content="AZAG Mayden, cybersécurité, informatique, réseaux, étudiant alternance, CV">
     <style>
         body {
             font-family: 'Press Start 2P', cursive;
-            overflow: hidden;
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+            color: #fff;
         }
 
         .home {
-            background: url('https://example.com/video-game-background.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background-color: #000;
             height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: black;
             text-align: center;
-            animation: fadeIn 1s;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes fadeOut {
-            from { opacity: 1; }
-            to { opacity: 0; }
         }
 
         .btn-launch {
             background-color: #FFCC00;
             color: #000;
-            font-size: 24px;
-            padding: 20px 40px;
+            font-size: 18px;
+            padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            transition: background-color 0.3s;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         .btn-launch:hover {
-            background-color: #FFAA00;
+            background-color: #e0b700;
         }
 
         .cv {
             display: none;
-            background-color: #f0f0f0;
+            background-color: #f9f9f9;
             color: #333;
-            padding: 20px;
-            opacity: 0;
-            transition: opacity 0.5s;
-            height: 100vh;
+            min-height: 100vh;
             overflow-y: auto;
         }
 
-        .navbar {
-            background-color: #343a40;
-        }
-
-        .navbar-nav .nav-link {
-            color: #ffffff;
-        }
-
-        .header {
+        header {
             background-color: #007BFF;
             color: white;
-            padding: 40px 0;
+            padding: 20px;
             text-align: center;
-            margin-bottom: 20px;
-            border-radius: 0 0 10px 10px;
         }
 
-        .section {
-            background-color: white;
-            border-radius: 10px;
-            padding: 20px;
-            margin: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .navbar {
+            margin-bottom: 20px;
         }
 
         h2 {
-            color: #007BFF;
+            font-size: 24px;
         }
 
-        footer {
-            text-align: center;
-            margin: 20px 0;
-            color: #aaaaaa;
+        p {
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
+    <!-- Si JavaScript est désactivé -->
+    <noscript>
+        <div style="background-color: #000; color: #fff; text-align: center; padding: 20px;">
+            Activez JavaScript pour afficher cette page correctement.
+        </div>
+    </noscript>
+
     <!-- Page d'accueil -->
     <div class="home" id="home">
         <h1>Bienvenue dans l'univers d'AZAG Mayden</h1>
@@ -108,44 +92,56 @@
 
     <!-- Section CV -->
     <div id="cv" class="cv">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand mx-auto" href="#">AZAG Mayden</a>
+        <header>
+            <h1>AZAG Mayden</h1>
+            <p>Étudiant en alternance en cybersécurité informatique et réseaux</p>
+        </header>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Menu</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
                     <li class="nav-item"><a class="nav-link" href="#competences">Compétences</a></li>
                     <li class="nav-item"><a class="nav-link" href="#diplomes">Diplômes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#qualites">Qualités</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#langues">Langues</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
-        
-        <div class="header">
-            <h1>AZAG Mayden</h1>
-            <h3>Étudiant en alternance en cybersécurité informatique et réseaux</h3>
-            <p>(Rythme : 1 semaine école / 1 semaine entreprise)</p>
-        </div>
 
-        <!-- Votre contenu pour le CV ici -->
+        <div class="container mt-4">
+            <section id="experience">
+                <h2>Expérience</h2>
+                <p>Décrivez ici vos expériences professionnelles ou académiques.</p>
+            </section>
+            <section id="competences">
+                <h2>Compétences</h2>
+                <p>Listez vos compétences techniques et personnelles.</p>
+            </section>
+            <section id="diplomes">
+                <h2>Diplômes</h2>
+                <p>Indiquez vos diplômes obtenus et leur année d'obtention.</p>
+            </section>
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>Ajoutez vos informations de contact.</p>
+            </section>
+        </div>
     </div>
 
+    <!-- Scripts -->
     <script>
-        document.getElementById('launchBtn').addEventListener('click', function() {
+        document.getElementById('launchBtn').addEventListener('click', function () {
             const home = document.getElementById('home');
             const cv = document.getElementById('cv');
 
-            home.style.animation = 'fadeOut 0.5s forwards';
-            setTimeout(() => {
-                home.style.display = 'none';
-                cv.style.display = 'block';
-                cv.style.opacity = '1';
-            }, 500);
+            home.style.display = 'none';
+            cv.style.display = 'block';
         });
     </script>
 </body>
 </html>
+
