--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
         p {
             font-size: 16px;
         }
+
+        .section {
+            margin-bottom: 30px;
+        }
+
+        .list-group-item {
+            background-color: #f9f9f9;
+        }
+
     </style>
 </head>
 <body>
@@ -113,21 +122,57 @@
         </nav>
 
         <div class="container mt-4">
-            <section id="experience">
+            <!-- Section Expérience -->
+            <section id="experience" class="section">
                 <h2>Expérience</h2>
-                <p>Décrivez ici vos expériences professionnelles ou académiques.</p>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <h5>Stage en cybersécurité</h5>
+                        <p>Entreprise XYZ - Janv. 2023 - Juin 2023</p>
+                        <p>Gestion des risques de sécurité, analyse des vulnérabilités réseau, mise en place de protocoles de sécurité renforcés.</p>
+                    </li>
+                    <li class="list-group-item">
+                        <h5>Technicien support informatique</h5>
+                        <p>Entreprise ABC - Sept. 2021 - Déc. 2022</p>
+                        <p>Assistance technique aux utilisateurs, gestion des incidents et résolution des problèmes liés au matériel et aux logiciels.</p>
+                    </li>
+                </ul>
             </section>
-            <section id="competences">
+
+            <!-- Section Compétences -->
+            <section id="competences" class="section">
                 <h2>Compétences</h2>
-                <p>Listez vos compétences techniques et personnelles.</p>
+                <ul class="list-group">
+                    <li class="list-group-item">Cybersécurité : Gestion des pare-feu, cryptage des données, tests de pénétration</li>
+                    <li class="list-group-item">Réseaux : Configuration des réseaux, gestion des serveurs, analyse des protocoles</li>
+                    <li class="list-group-item">Langages de programmation : Python, Bash, C, JavaScript</li>
+                    <li class="list-group-item">Gestion de projet : Méthodologie Agile, gestion de la qualité, planification des ressources</li>
+                </ul>
             </section>
-            <section id="diplomes">
+
+            <!-- Section Diplômes -->
+            <section id="diplomes" class="section">
                 <h2>Diplômes</h2>
-                <p>Indiquez vos diplômes obtenus et leur année d'obtention.</p>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <h5>BTS Systèmes Numériques - Option Cybersécurité</h5>
+                        <p>2023 - Lycée XYZ</p>
+                    </li>
+                    <li class="list-group-item">
+                        <h5>Licence Informatique - Réseaux et Systèmes</h5>
+                        <p>2021 - Université ABC</p>
+                    </li>
+                </ul>
             </section>
-            <section id="contact">
+
+            <!-- Section Contact -->
+            <section id="contact" class="section">
                 <h2>Contact</h2>
-                <p>Ajoutez vos informations de contact.</p>
+                <ul class="list-group">
+                    <li class="list-group-item">Email: azag.mayden@exemple.com</li>
+                    <li class="list-group-item">Téléphone: 01 23 45 67 89</li>
+                    <li class="list-group-item">LinkedIn: <a href="https://www.linkedin.com/in/azag-mayden" target="_blank">Profil LinkedIn</a></li>
+                </ul>
             </section>
         </div>
     </div>
