--- a/index.html
+++ b/index.html
@@ -78,10 +78,32 @@
             margin-bottom: 30px;
         }
 
+        .card {
+            margin: 10px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card-header {
+            background-color: #007BFF;
+            color: white;
+        }
+
+        .card-body {
+            display: none;
+        }
+
+        .card.active .card-body {
+            display: block;
+        }
+
         .list-group-item {
             background-color: #f9f9f9;
         }
-
     </style>
 </head>
 <body>
@@ -125,54 +147,82 @@
             <!-- Section Expérience -->
             <section id="experience" class="section">
                 <h2>Expérience</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <h5>Stage en cybersécurité</h5>
-                        <p>Entreprise XYZ - Janv. 2023 - Juin 2023</p>
-                        <p>Gestion des risques de sécurité, analyse des vulnérabilités réseau, mise en place de protocoles de sécurité renforcés.</p>
-                    </li>
-                    <li class="list-group-item">
-                        <h5>Technicien support informatique</h5>
-                        <p>Entreprise ABC - Sept. 2021 - Déc. 2022</p>
-                        <p>Assistance technique aux utilisateurs, gestion des incidents et résolution des problèmes liés au matériel et aux logiciels.</p>
-                    </li>
-                </ul>
+                <div class="card" id="cardExperience">
+                    <div class="card-header">
+                        <h4>Expérience Professionnelle</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <h5>Stage en cybersécurité</h5>
+                                <p>Entreprise XYZ - Janv. 2023 - Juin 2023</p>
+                                <p>Gestion des risques de sécurité, analyse des vulnérabilités réseau, mise en place de protocoles de sécurité renforcés.</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>Technicien support informatique</h5>
+                                <p>Entreprise ABC - Sept. 2021 - Déc. 2022</p>
+                                <p>Assistance technique aux utilisateurs, gestion des incidents et résolution des problèmes liés au matériel et aux logiciels.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
 
             <!-- Section Compétences -->
             <section id="competences" class="section">
                 <h2>Compétences</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">Cybersécurité : Gestion des pare-feu, cryptage des données, tests de pénétration</li>
-                    <li class="list-group-item">Réseaux : Configuration des réseaux, gestion des serveurs, analyse des protocoles</li>
-                    <li class="list-group-item">Langages de programmation : Python, Bash, C, JavaScript</li>
-                    <li class="list-group-item">Gestion de projet : Méthodologie Agile, gestion de la qualité, planification des ressources</li>
-                </ul>
+                <div class="card" id="cardCompetences">
+                    <div class="card-header">
+                        <h4>Compétences Techniques</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">Cybersécurité : Gestion des pare-feu, cryptage des données, tests de pénétration</li>
+                            <li class="list-group-item">Réseaux : Configuration des réseaux, gestion des serveurs, analyse des protocoles</li>
+                            <li class="list-group-item">Langages de programmation : Python, Bash, C, JavaScript</li>
+                            <li class="list-group-item">Gestion de projet : Méthodologie Agile, gestion de la qualité, planification des ressources</li>
+                        </ul>
+                    </div>
+                </div>
             </section>
 
             <!-- Section Diplômes -->
             <section id="diplomes" class="section">
                 <h2>Diplômes</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <h5>BTS Systèmes Numériques - Option Cybersécurité</h5>
-                        <p>2023 - Lycée XYZ</p>
-                    </li>
-                    <li class="list-group-item">
-                        <h5>Licence Informatique - Réseaux et Systèmes</h5>
-                        <p>2021 - Université ABC</p>
-                    </li>
-                </ul>
+                <div class="card" id="cardDiplomes">
+                    <div class="card-header">
+                        <h4>Diplômes Obtenus</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <h5>BTS Systèmes Numériques - Option Cybersécurité</h5>
+                                <p>2023 - Lycée XYZ</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>Licence Informatique - Réseaux et Systèmes</h5>
+                                <p>2021 - Université ABC</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
 
             <!-- Section Contact -->
             <section id="contact" class="section">
                 <h2>Contact</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">Email: azag.mayden@exemple.com</li>
-                    <li class="list-group-item">Téléphone: 01 23 45 67 89</li>
-                    <li class="list-group-item">LinkedIn: <a href="https://www.linkedin.com/in/azag-mayden" target="_blank">Profil LinkedIn</a></li>
-                </ul>
+                <div class="card" id="cardContact">
+                    <div class="card-header">
+                        <h4>Informations de Contact</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">Email: azag.mayden@exemple.com</li>
+                            <li class="list-group-item">Téléphone: 01 23 45 67 89</li>
+                            <li class="list-group-item">LinkedIn: <a href="https://www.linkedin.com/in/azag-mayden" target="_blank">Profil LinkedIn</a></li>
+                        </ul>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
@@ -186,7 +236,14 @@
             home.style.display = 'none';
             cv.style.display = 'block';
         });
+
+        // Gérer l'affichage des informations sur chaque card
+        const cards = document.querySelectorAll('.card');
+        cards.forEach(card => {
+            card.addEventListener('click', function () {
+                card.classList.toggle('active');
+            });
+        });
     </script>
 </body>
 </html>
-
