--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-DDD
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AZAG Mayden - CV</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+    <style>
+        body {
+            font-family: 'Press Start 2P', cursive;
+            margin: 0;
+            padding: 0;
+        }
+
+        .home {
+            background-color: #000;
+            color: #fff;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .btn-launch {
+            background-color: #FFCC00;
+            color: #000;
+            font-size: 24px;
+            padding: 20px 40px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .cv {
+            display: none;
+            background-color: #f0f0f0;
+            height: 100vh;
+            overflow-y: auto;
+        }
+    </style>
+</head>
+<body>
+    <!-- Contenu initial visible -->
+    <noscript>
+        <div style="background-color: #000; color: #fff; text-align: center; padding: 20px;">
+            Activez JavaScript pour afficher cette page correctement.
+        </div>
+    </noscript>
+
+    <!-- Page d'accueil -->
+    <div class="home" id="home">
+        <h1>Bienvenue dans l'univers d'AZAG Mayden</h1>
+        <p>Appuyez sur le bouton pour accéder à votre CV !</p>
+        <button class="btn-launch" id="launchBtn">Lancer</button>
+    </div>
+
+    <!-- Section CV -->
+    <div id="cv" class="cv">
+        <header class="bg-primary text-white text-center py-4">
+            <h1>AZAG Mayden</h1>
+            <p>Étudiant en alternance en cybersécurité informatique et réseaux</p>
+        </header>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#competences">Compétences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#diplomes">Diplômes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Contenu du CV -->
+        <div class="container mt-4">
+            <section id="experience">
+                <h2>Expérience</h2>
+                <p>...</p>
+            </section>
+            <section id="competences">
+                <h2>Compétences</h2>
+                <p>...</p>
+            </section>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('launchBtn').addEventListener('click', function () {
+            const home = document.getElementById('home');
+            const cv = document.getElementById('cv');
+
+            home.style.display = 'none';
+            cv.style.display = 'block';
+        });
+    </script>
+</body>
+</html>
+
