--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Press Start 2P', cursive;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        .header {
+            background-color: #007BFF;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            border-radius: 0 0 10px 10px;
+            margin-bottom: 20px;
+        }
+
+        .section {
+            margin: 20px;
+            text-align: center;
         }
 
         .case {
-            width: 100%;
             background-color: #007BFF;
             color: white;
             padding: 10px 15px;
@@ -31,84 +46,110 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             margin-top: 10px;
-            background-color: #f9f9f9;
+            background-color: #ffffff;
+            text-align: left;
         }
 
-        .header {
+        footer {
             text-align: center;
-            margin-bottom: 20px;
+            padding: 10px 0;
+            margin-top: 20px;
+            background-color: #333;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="header">
-            <h1>AZAG Mayden</h1>
-            <h3>Étudiant en alternance en cybersécurité</h3>
+    <div class="header">
+        <h1>AZAG Mayden</h1>
+        <h3>Étudiant en alternance en cybersécurité</h3>
+        <p>Rythme : 1 semaine école / 1 semaine entreprise</p>
+    </div>
+
+    <div class="container">
+        <!-- Section Expérience -->
+        <div class="section">
+            <div class="case" data-category="experience">Expérience</div>
+            <div class="details" id="experience-details">
+                <p><strong>Programmation informatique</strong> (Archivage et stockage de fichier) 2022-2023 :</p>
+                <ul>
+                    <li>Étude du besoin</li>
+                    <li>Mise en place d’une solution technique permettant de déplacer des fichiers sources vers une destination cible avec modification du format</li>
+                    <li>Gestion de l’archivage des fichiers (Python)</li>
+                </ul>
+                <p><strong>Projet informatique</strong> (Serre automatique) 2022-2023 :</p>
+                <ul>
+                    <li>Création d’une serre automatique : Étude du besoin et mise en place technique de la solution (Arduino, Python)</li>
+                </ul>
+                <p><strong>Création Site Web</strong> 2021-2022 :</p>
+                <ul>
+                    <li>Découverte de HTML / CSS pour une création de site internet.</li>
+                </ul>
+            </div>
         </div>
 
-        <!-- Cases pour le CV -->
-        <div class="case" data-category="experience">Expérience</div>
-        <div class="details" id="experience-details">
-            <p><strong>Programmation informatique</strong> (Archivage et stockage de fichier) 2022-2023 :</p>
-            <ul>
-                <li>Étude du besoin</li>
-                <li>Mise en place d’une solution technique permettant de déplacer des fichiers sources vers une destination cible avec modification du format</li>
-                <li>Gestion de l’archivage des fichiers (Python)</li>
-            </ul>
-            <p><strong>Projet informatique</strong> (Serre automatique) 2022-2023 :</p>
-            <ul>
-                <li>Création d’une serre automatique : Étude du besoin et mise en place technique de la solution (Arduino, Python)</li>
-            </ul>
-            <p><strong>Création Site Web</strong> 2021-2022 :</p>
-            <ul>
-                <li>Découverte de HTML / CSS pour une création de site internet.</li>
-            </ul>
+        <!-- Section Compétences -->
+        <div class="section">
+            <div class="case" data-category="competence">Compétences</div>
+            <div class="details" id="competence-details">
+                <ul>
+                    <li><strong>Montage vidéo (Pro)</strong> : Adobe Premier Pro, Adobe After Effect</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="case" data-category="competence">Compétences Professionnelles</div>
-        <div class="details" id="competence-details">
-            <ul>
-                <li><strong>Montage vidéo (Pro)</strong> : Adobe Premier Pro, Adobe After Effect</li>
-            </ul>
+        <!-- Section Diplômes -->
+        <div class="section">
+            <div class="case" data-category="diplomes">Diplômes</div>
+            <div class="details" id="diplomes-details">
+                <p><strong>Lycée Etienne Mimard</strong></p>
+                <ul>
+                    <li>Baccalauréat Général Scientifique (Mathématiques - Sciences de l’ingénieur) 2022-2023</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="case" data-category="diplomes">Diplômes</div>
-        <div class="details" id="diplomes-details">
-            <p><strong>Lycée Etienne Mimard</strong></p>
-            <ul>
-                <li>Baccalauréat Général Scientifique (Mathématique - Science de l’ingénieur) 2022-2023</li>
-            </ul>
+        <!-- Section Qualités -->
+        <div class="section">
+            <div class="case" data-category="qualites">Qualités</div>
+            <div class="details" id="qualites-details">
+                <ul>
+                    <li>Esprit d'équipe</li>
+                    <li>Rigueur</li>
+                    <li>Dynamisme</li>
+                    <li>Assiduité</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="case" data-category="qualites">Qualités</div>
-        <div class="details" id="qualites-details">
-            <ul>
-                <li>Esprit d'équipe</li>
-                <li>Rigueur</li>
-                <li>Dynamisme</li>
-                <li>Assiduité</li>
-            </ul>
+        <!-- Section Langues -->
+        <div class="section">
+            <div class="case" data-category="langues">Langues</div>
+            <div class="details" id="langues-details">
+                <ul>
+                    <li>Français</li>
+                    <li>Anglais (B2)</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="case" data-category="langues">Langues</div>
-        <div class="details" id="langues-details">
-            <ul>
-                <li>Français</li>
-                <li>Anglais (B2)</li>
-            </ul>
-        </div>
-
-        <div class="case" data-category="contact">Informations Personnelles</div>
-        <div class="details" id="contact-details">
-            <ul>
-                <li>Numéro tel : 12.34.56.78</li>
-                <li>Âge : 19 ans</li>
-                <li>Mail : maydenazag@gmail.com</li>
-                <li>Adresse : 4 rue des balivernes</li>
-            </ul>
+        <!-- Section Contact -->
+        <div class="section">
+            <div class="case" data-category="contact">Informations Personnelles</div>
+            <div class="details" id="contact-details">
+                <ul>
+                    <li>Numéro tel : 12.34.56.78</li>
+                    <li>Âge : 19 ans</li>
+                    <li>Mail : maydenazag@gmail.com</li>
+                    <li>Adresse : 4 rue des balivernes</li>
+                </ul>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <p>© 2024 AZAG Mayden - Tous droits réservés</p>
+    </footer>
 
     <script>
         // Ajouter un gestionnaire d'événements pour chaque case
